docs/api/0.4.2-beta/ironwood/bench/Bench.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.4\.2\-beta**

[All packages](../../README.md) / [`ironwood.bench`](package-summary.md)

# Bench

**Class** · `ironwood.bench.Bench`

```java
public class Bench
```

Measures latency in nanoseconds, with warmup exclusion and percentile reports.



Time an operation with [`System#nanoTime()`](../lang/System.md#member-nanoTime-28--29-) and pass the elapsed
nanoseconds to [`measure(long)`](#member-measure-28-long-29-). Alternatively, call [`mark()`](#member-mark-28--29-)
before the operation and [`measure()`](#member-measure-28--29-) afterward to let Bench handle
the clock; `measure()` consumes each mark once. Run warmup plus
measurement iterations:
[`getIterations()`](#member-getIterations-28--29-) includes warmup, while [`getMeasurements()`](#member-getMeasurements-28--29-)
and statistics exclude it. `new Bench()` starts without warmup.
Instances are intended for one thread and do not synchronize. Keep verbose
progress logging off while collecting timings.



The histogram retains one primitive counter per distinct duration. Recording
an existing duration allocates nothing. New durations can grow the histogram
storage. Reset retains that storage for reuse. Percentile reporting sorts
distinct durations and computes the average and maximum of the fastest
rounded fraction of measurements, including part of a repeated duration.
The reported fractions are 75%, 90%, 99%, 99.9%, 99.99%, and 99.999%.



[`reset(true)`](#member-reset-28-boolean-29-) clears results and repeats the current
warmup phase; [`reset()`](#member-reset-28--29-) clears results and disables warmup. Once
disabled, `reset(true)` does not restore the original warmup count.



Durations supplied by the caller must be nonnegative, and iteration counts,
measurement counts, and the sum of measured nanoseconds must fit in a signed
long. These caller obligations are not checked on the recording path.
Warmup primes caches and storage in native code; there is no JIT compilation.



Free the benchmark after use to reclaim its histogram and counters.
`results()` returns an independent String that the caller must free;
`printResults()` handles its own temporary report. Reports use comma
grouping, a decimal point, and three fractional digits, regardless of locale.
[`printResults()`](#member-printResults-28--29-) includes percentiles; use
[`printResults(false)`](#member-printResults-28-boolean-29-) to omit them.



This example measures a 1,000 ns busy wait, excludes 1,000 warmup
iterations, and records 10,000 measurements. Replace `sleepFor(1000)`
with the operation you want to time. It prints a report, reclaims the
benchmark, and exits with status `0`. Actual timings vary by machine.



```java
import ironwood.bench.Bench;

public class BenchExample {

    private static void sleepFor(long nanos) {

        long start = System.nanoTime();
        while (System.nanoTime() - start < nanos);
    }

    public static int main(String[] args) {

        int warmup = 1000;
        int measurements = 10000;
        Bench bench = new Bench(warmup);
        while (bench.getIterations() < warmup + measurements) {
            long start = System.nanoTime();
            sleepFor(1000);
            bench.measure(System.nanoTime() - start);
        }
        bench.printResults();
        free bench;
        return 0;
    }
}
```





You can let Bench handle the clock instead of reading
[`System#nanoTime()`](../lang/System.md#member-nanoTime-28--29-) yourself. Replace the example's entire measurement
loop with the following [`mark()`](#member-mark-28--29-) / [`measure()`](#member-measure-28--29-) loop. Keep the
same setup, `printResults()`, and cleanup. Both forms record elapsed
nanoseconds and apply the same warmup exclusion and reporting rules.



```java
while (bench.getIterations() < warmup + measurements) {
    bench.mark();
    sleepFor(1000);
    bench.measure();
}
```

**See also**

[`NanoBench`](NanoBench.md)


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`Bench()`](#member-Bench-28--29-) | Creates a benchmark with no warmup and no verbose logging. |
| [`Bench(int)`](#member-Bench-28-int-29-) | Creates a benchmark that ignores the first `warmup` iterations. |
| [`Bench(long)`](#member-Bench-28-long-29-) | Creates a benchmark with a long warmup count and no verbose logging. |
| [`Bench(long,boolean,int)`](#member-Bench-28-long-2c-boolean-2c-int-29-) | Creates a benchmark with explicit native logging options. |
| [`reset()`](#member-reset-28--29-) | Clears results and disables warmup for subsequent runs. |
| [`reset(boolean)`](#member-reset-28-boolean-29-) | Clears results and retains histogram storage for reuse. |
| [`mark()`](#member-mark-28--29-) | Starts or replaces the timer. |
| [`measure()`](#member-measure-28--29-) | Consumes the current mark and records its elapsed time. |
| [`isWarmingUp()`](#member-isWarmingUp-28--29-) | Returns whether the next iteration is still part of warmup. |
| [`measure(long)`](#member-measure-28-long-29-) | Records a caller-measured duration without consuming a pending mark. |
| [`getIterations()`](#member-getIterations-28--29-) | Returns the iteration count, including warmup. |
| [`getMeasurements()`](#member-getMeasurements-28--29-) | Returns the number of recorded measurements, excluding warmup. |
| [`getAverage()`](#member-getAverage-28--29-) | Returns mean nanoseconds rounded to two fractional digits, or zero if empty. |
| [`results(boolean)`](#member-results-28-boolean-29-) | Creates an independent report with counts, mean, minimum, and maximum. |
| [`results()`](#member-results-28--29-) | Returns a fresh caller-owned report including percentiles. |
| [`printResults(boolean)`](#member-printResults-28-boolean-29-) | Prints a report and a blank line, reclaiming the temporary String. |
| [`printResults()`](#member-printResults-28--29-) | Prints a report including percentiles and reclaims the temporary String. |

## Constructors

<a name="member-Bench-28--29-"></a>

### `Bench()`

```java
public Bench()
```

Creates a benchmark with no warmup and no verbose logging.


[Back to member summary](#member-summary)

<a name="member-Bench-28-int-29-"></a>

### `Bench(int)`

```java
public Bench(int warmup)
```

Creates a benchmark that ignores the first `warmup` iterations.

**Parameters**

| Name | Description |
| --- | --- |
| `warmup` | the warmup count; nonpositive values disable warmup |


[Back to member summary](#member-summary)

<a name="member-Bench-28-long-29-"></a>

### `Bench(long)`

```java
public Bench(long warmup)
```

Creates a benchmark with a long warmup count and no verbose logging.

**Parameters**

| Name | Description |
| --- | --- |
| `warmup` | the warmup count; nonpositive values disable warmup |


[Back to member summary](#member-summary)

<a name="member-Bench-28-long-2c-boolean-2c-int-29-"></a>

### `Bench(long,boolean,int)`

```java
public Bench(long warmup, boolean verbose, int verboseLogEvery)
```

Creates a benchmark with explicit native logging options.



Logging prints the first iteration and every `verboseLogEvery`
iterations, including warmup. Console output affects subsequent timings.
No system properties or environment variables are consulted.

**Parameters**

| Name | Description |
| --- | --- |
| `warmup` | the warmup count; nonpositive values disable warmup |
| `verbose` | whether to print progress |
| `verboseLogEvery` | the positive progress interval |

**Throws**

| Exception | Condition |
| --- | --- |
| [`IllegalArgumentException`](../lang/IllegalArgumentException.md) | if the interval is not positive |


[Back to member summary](#member-summary)

## Methods

<a name="member-reset-28--29-"></a>

### `reset()`

```java
public void reset()
```

Clears results and disables warmup for subsequent runs.


[Back to member summary](#member-summary)

<a name="member-reset-28-boolean-29-"></a>

### `reset(boolean)`

```java
public void reset(boolean repeatWarmup)
```

Clears results and retains histogram storage for reuse.

**Parameters**

| Name | Description |
| --- | --- |
| `repeatWarmup` | whether to keep the current warmup count; false sets it to zero, and a later true does not restore the constructor value |


[Back to member summary](#member-summary)

<a name="member-mark-28--29-"></a>

### `mark()`

```java
public final long mark()
```

Starts or replaces the timer.

**Returns**

the monotonic start timestamp in nanoseconds, with arbitrary origin


[Back to member summary](#member-summary)

<a name="member-measure-28--29-"></a>

### `measure()`

```java
public long measure()
```

Consumes the current mark and records its elapsed time.

**Throws**

| Exception | Condition |
| --- | --- |
| [`RuntimeException`](../lang/RuntimeException.md) | if the clock produces a negative elapsed duration |

**Returns**

elapsed nanoseconds, or -1 during warmup or without a pending mark


[Back to member summary](#member-summary)

<a name="member-isWarmingUp-28--29-"></a>

### `isWarmingUp()`

```java
public final boolean isWarmingUp()
```

Returns whether the next iteration is still part of warmup.


[Back to member summary](#member-summary)

<a name="member-measure-28-long-29-"></a>

### `measure(long)`

```java
public final boolean measure(long lastNanoTime)
```

Records a caller-measured duration without consuming a pending mark.



Read [`System#nanoTime()`](../lang/System.md#member-nanoTime-28--29-) before and after the operation, then
pass the difference in nanoseconds. The first configured warmup iterations
are excluded from measurements and statistics.

**Parameters**

| Name | Description |
| --- | --- |
| `lastNanoTime` | nonnegative elapsed nanoseconds |

**Returns**

true when recorded, false when excluded as warmup


[Back to member summary](#member-summary)

<a name="member-getIterations-28--29-"></a>

### `getIterations()`

```java
public long getIterations()
```

Returns the iteration count, including warmup.


[Back to member summary](#member-summary)

<a name="member-getMeasurements-28--29-"></a>

### `getMeasurements()`

```java
public long getMeasurements()
```

Returns the number of recorded measurements, excluding warmup.


[Back to member summary](#member-summary)

<a name="member-getAverage-28--29-"></a>

### `getAverage()`

```java
public final double getAverage()
```

Returns mean nanoseconds rounded to two fractional digits, or zero if empty.


[Back to member summary](#member-summary)

<a name="member-results-28-boolean-29-"></a>

### `results(boolean)`

```java
public String results(boolean includePercentiles)
```

Creates an independent report with counts, mean, minimum, and maximum.
An empty benchmark reports only its counts.

**Parameters**

| Name | Description |
| --- | --- |
| `includePercentiles` | whether to append the six percentile summaries |

**Returns**

a fresh caller-owned String; free it after use


[Back to member summary](#member-summary)

<a name="member-results-28--29-"></a>

### `results()`

```java
public String results()
```

Returns a fresh caller-owned report including percentiles.


[Back to member summary](#member-summary)

<a name="member-printResults-28-boolean-29-"></a>

### `printResults(boolean)`

```java
public void printResults(boolean includePercentiles)
```

Prints a report and a blank line, reclaiming the temporary String.

**Parameters**

| Name | Description |
| --- | --- |
| `includePercentiles` | whether to append percentile summaries |


[Back to member summary](#member-summary)

<a name="member-printResults-28--29-"></a>

### `printResults()`

```java
public void printResults()
```

Prints a report including percentiles and reclaims the temporary String.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
